# jbloxDB
# © 2025 Green Arrowhead LLP
# Licensed under the jbloxDB License v1.0
# See LICENSE.txt for terms.
# Free for individuals and small companies.
# Commercial license required for production use by companies over USD 5M revenue or for SaaS/product distribution.

[package]
name = "jbloxdb"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0"
internment = "0.4"
memmap2 = "0.9"
memchr = "2.7"
rayon = "1.10.0"
rand = "0.8"
chrono = "0.4"
config = "0.13"
common = { path = "../common" }
axum = "0.7"
hyper = "1.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5"}
hyper-util = "0.1.3"
tokio-util = "0.7"
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]
