# jbloxDB
# © 2025 Green Arrowhead LLP
# Licensed under the jbloxDB License v1.0
# See LICENSE.txt for terms.
# Free for individuals and small companies.
# Commercial license required for production use by companies over USD 5M revenue or for SaaS/product distribution.

[package]
name = "jbloxdb"
version = "0.1.0"
edition = "2024"


[dependencies]
libc = "0.2"
anyhow = "1.0"
internment = "0.4"
memmap2 = "0.9"
memchr = "2.7"
rayon = "1.10.0"
rand = "0.8"
chrono = "0.4"
config = "0.13"
axum = "0.7"
hyper = "1.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json =  { version = "1.0", features = ["preserve_order"] }
tower-http = { version = "0.5"}
hyper-util = "0.1.3"
tokio-util = "0.7"
ordered-float = "4"
rustc-hash = "1.1"
sorted-vec = "0.8"
crossterm = "0.27"
crossbeam = "0.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"
indexmap = "2"
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]
